Add Vatify.php to RecordCollectors.

--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -32,6 +32,8 @@
     "LBL_BR_RECITACNPJ_ERROR": "The query limit has been exceeded. Wait one minute.",
     "LBL_ENHETSREGISTERET": "Norwegian Register Organizations (Enhetsregisteret)",
     "LBL_ENHETSREGISTERET_DESC": "Fetching data about Norwegian companies from the Norwegian Register Organizations (Enhetsregisteret)",
-    "LBL_ENHETSREGISTERET_400": "Organization number must be a number with exactly 9 digits."
+    "LBL_ENHETSREGISTERET_400": "Organization number must be a number with exactly 9 digits.",
+    "LBL_VATIFY": "VATify.eu",
+    "LBL_VATIFY_DESC": "VATify.eu tracks your selected business subjects and notifies you of any changes — whether it's just an extra dash in a company's phone number or the final closure of its operations."
   }
 }
