Add new fields to json files.

--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -34,6 +34,6 @@
     "LBL_ENHETSREGISTERET_DESC": "Fetching data about Norwegian companies from the Norwegian Register Organizations (Enhetsregisteret)",
     "LBL_ENHETSREGISTERET_400": "Organization number must be a number with exactly 9 digits.",
     "LBL_VATIFY": "VATify.eu",
-    "LBL_VATIFY_DESC": "VATify.eu tracks your selected business subjects and notifies you of any changes — whether it's just an extra dash in a company's phone number or the final closure of its operations."
+    "LBL_VATIFY_DESC": "Feting data about companies from VATify."
   }
 }
