--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -33,7 +33,7 @@
     "LBL_ENHETSREGISTERET": "Norwegian Register Organizations (Enhetsregisteret)",
     "LBL_ENHETSREGISTERET_DESC": "Fetching data about Norwegian companies from the Norwegian Register Organizations (Enhetsregisteret)",
     "LBL_ENHETSREGISTERET_400": "Organization number must be a number with exactly 9 digits.",
-    "LBL_VATIFY": "VATify.eu",
-    "LBL_VATIFY_DESC": "Feting data about companies from VATify."
+    "LBL_VATIFY_EU": "VATify.eu",
+    "LBL_VATIFY_DESC_EU": "Feting data about companies from VATify."
   }
 }
