Integration with Vatify. (#16271)
* Integration with Vatify [in progress]

* Add Vatify.php to RecordCollectors.

* Address server change.

* Add auth.

* Add new fields to json files.

* Improvment code.

Co-authored-by: Mariusz Krzaczkowski <m.krzaczkowski@yetiforce.com>

--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -32,6 +32,8 @@
     "LBL_BR_RECITA_WS_CNPJ_ERROR": "The query limit has been exceeded. Wait one minute.",
     "LBL_NO_BRREG_ENHETSREGISTERET": "Norwegian Register Organizations (Enhetsregisteret)",
     "LBL_NO_BRREG_ENHETSREGISTERET_DESC": "Fetching data about Norwegian companies from the Norwegian Register Organizations (Enhetsregisteret)",
-    "LBL_NO_BRREG_ENHETSREGISTERET_400": "Organization number must be a number with exactly 9 digits."
+    "LBL_NO_BRREG_ENHETSREGISTERET_400": "Organization number must be a number with exactly 9 digits.",
+    "LBL_VATIFY_EU": "VATify.eu",
+    "LBL_VATIFY_DESC_EU": "Feting data about companies from VATify."
   }
 }
