--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -10,7 +10,10 @@
     "LBL_API_KEY_OPTIONAL": "API Key (Optional)",
     "LBL_SAVE_NOTIFY_OK": "Saved changes.",
     "LBL_PROVIDER_INVALID": "Configuration is incorrect",
-    "LBL_CONFIG": "Setup data for record collector"
+    "LBL_CONFIG": "Setup data for record collector",
+    "LBL_ACCESS_KEY": "Access Key",
+    "LBL_CLIENT_ID": "Client ID",
+    "LBL_VATIFY_EU_NO_AUTH": "Bearer token not fetch."
   },
   "js": {}
 }
