Zefix integraion [in progress]

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -891,6 +891,7 @@
     "currently logged in user": "Currently logged in user",
     "user currently not logged": "User currently not logged",
     "Users": "Users",
+    "Username": "Username",
     "Service Requests": "Service Requests",
     "LBL_NULL_VALUE": "(No value)",
     "LBL_QUICK_CREATE_EDITOR": "Quick Create Editor",
