A new product has been added to the store - YetiForceWaproERP , YetiForceInstallPortalInCloud

--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -150,6 +150,10 @@
     "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_INTRO": "",
     "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_DESC": "",
     "LBL_SHOP_YETIFORCERCVATIFYEU_INTRO": "",
-    "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": ""
+    "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": "",
+    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_INTRO": "",
+    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_DESC": "",
+    "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "",
+    "LBL_SHOP_YETIFORCEWAPROERP_DESC": ""
   }
 }
