Added information about the loss of the right to quickly edit a given dictionary in the kanban configuration

--- a/languages/en-US/Settings/Kanban.json
+++ b/languages/en-US/Settings/Kanban.json
@@ -7,7 +7,8 @@
     "LBL_NO_BOARDS": "No boards",
     "LBL_DETAIL_FIELDS": "Details fields",
     "LBL_SUM_FIELDS": "Summation fields",
-    "LBL_NO_FIELDS_ADD": "No fields to add"
+    "LBL_NO_FIELDS_ADD": "No fields to add",
+    "LBL_NOT_VISIBLE_KANBAN": "If you have lost the quick edit permission for the %s dictionary, it will not be visible in the Kanban view."
   },
   "js": {}
 }
