--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -38,6 +38,8 @@
     "LBL_DK_CVR": "The Danish Central Business Register (CVR)",
     "LBL_DK_CVR_DESC": "Feting data on all businesses in Denmark from The Danish Central Business Register (CVR)",
     "LBL_UA_YOU_CONTROL": "YouScore API from YouControl",
-    "LBL_UA_YOU_CONTROL_DESC": "Check contractors and follow their changes in Ukraine from YouScore API"
+    "LBL_UA_YOU_CONTROL_DESC": "Check contractors and follow their changes in Ukraine from YouScore API",
+    "LBL_NORTH_DATA": "NorthData",
+    "LBL_NORTH_DATA_DESC": "Module allows you to directly access North Data's company database."
   }
 }
