--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -156,6 +156,8 @@
     "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "",
     "LBL_SHOP_YETIFORCEWAPROERP_DESC": "",
     "LBL_SHOP_YETIFORCERCDKCVR_INTRO": "",
-    "LBL_SHOP_YETIFORCERCDKCVR_DESC": ""
+    "LBL_SHOP_YETIFORCERCDKCVR_DESC": "",
+    "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "",
+    "LBL_SHOP_YETIFORCERCNORTHDATA_DESC": ""
   }
 }
