--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -40,6 +40,8 @@
     "LBL_UA_YOU_CONTROL": "YouControl [UA]",
     "LBL_UA_YOU_CONTROL_DESC": "Check contractors and follow their changes in Ukraine from YouScore API",
     "LBL_NORTH_DATA": "North Data",
-    "LBL_NORTH_DATA_DESC": "Feting data about companies North Data's company database"
+    "LBL_NORTH_DATA_DESC": "Feting data about companies North Data's company database",
+    "LBL_CH_ZEFIX": "Swiss Zefix [CH]",
+    "LBL_CH_ZEFIX_DESC": "Fetching data from Swiss Central Business Name Index (Zefix)"
   }
 }
