--- a/languages/en-US/OSSMail.json
+++ b/languages/en-US/OSSMail.json
@@ -15,8 +15,8 @@
     "LBL_RC_support_url": "Support address url",
     "LBL_RC_smtp_user": "Login to SMTP server (\"%u\" - login of logged in user)",
     "LBL_RC_smtp_pass": "Password to SMTP server (\"%p\" - password of logged in user)",
-    "LBL_RC_smtp_host": "Name of SMTP server and port (SMTP port default 25; 465 for SSL; 587)",
-    "LBL_RC_imap_host": "Name of IMAP server and port",
+    "LBL_RC_smtp_host": "SMTP host (ssl://smtp.gmail.com:465, SMTP port default 25; 465 for SSL; 587)",
+    "LBL_RC_imap_host": "IMAP host (ssl://imap.gmail.com:993)",
     "LBL_RC_debug_level": "Debugging level (1 = log; 4 = show, 8 = trace)",
     "LBL_RC_skin_logo": "Logo",
     "LBL_RC_ip_check": "Check IP address of client while giving authorization",
