Added improvements in record collector

--- a/languages/en-US/Settings/RecordCollector.json
+++ b/languages/en-US/Settings/RecordCollector.json
@@ -9,8 +9,8 @@
     "LBL_MODULES": "Modules",
     "LBL_API_KEY": "API Key",
     "LBL_TYPE": "Type",
-    "FillFields": "Show and fill",
-    "Summary": "Display",
+    "LBL_TYPE_FillFields": "Show and fill",
+    "LBL_TYPE_Summary": "Display",
     "LBL_API_KEY_OPTIONAL": "API Key (Optional)",
     "LBL_SAVE_NOTIFY_OK": "Saved changes.",
     "LBL_PROVIDER_INVALID": "Configuration is incorrect",
