Added improvements in record collector

--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -17,8 +17,8 @@
     "LBL_PL_VAT_PAYER_DESC": "The service allows you to verify whether an entity is an active, exempt, or unregistered VAT taxpayer in Poland",
     "LBL_PL_GUS": "GUS REGON [PL]",
     "LBL_PL_GUS_DESC": "Fetch data on Polish companies from the online REGON 1(BIR1) database provided by GUS",
-    "LBL_PL_NCR": "NCR [PL]",
-    "LBL_PL_NCR_DESC": "Fetch data on Polish companies from The National Court Register in Poland (KRS)",
+    "LBL_PL_KRS": "KRS [PL]",
+    "LBL_PL_KRS_DESC": "Fetch data on Polish companies from The National Court Register in Poland (KRS)",
     "LBL_PL_CEIDG": "Load business entity data from CEIDG [PL]",
     "LBL_PL_CEIDG_DESC": "Fetch data on Polish companies from the Central Register and Information on Economic Activity in Poland (CEIDG)",
     "LBL_UK_CH": "Companies House [GB]",
