--- a/languages/en-US/Other/RecordCollector.json
+++ b/languages/en-US/Other/RecordCollector.json
@@ -12,7 +12,7 @@
     "LBL_NORTH_DATA": "North Data",
     "LBL_NORTH_DATA_DESC": "Fetching data about companies North Data's company database",
     "LBL_USA_EDGAR": "EDGAR [USA]",
-    "LBL_USA_EDGAR_DESC": "Fetch data on US companies from the United States Securities and Exchange Commission via EDGAR ",
+    "LBL_USA_EDGAR_DESC": "Fetch data on US companies from the United States Securities and Exchange Commission via EDGAR",
     "LBL_PL_VAT_PAYER": "Verify VAT taxpayer’s status [PL]",
     "LBL_PL_VAT_PAYER_DESC": "The service allows you to verify whether an entity is an active, exempt, or unregistered VAT taxpayer in Poland",
     "LBL_PL_GUS": "GUS REGON [PL]",
@@ -24,14 +24,14 @@
     "LBL_UK_CH": "Companies House [GB]",
     "LBL_UK_CH_DESC": "Fetch data on UK companies from the Comapnies House agency",
     "LBL_UK_CH_NOT_FOUND_NO_DATA": "No NCR or company name has been set",
-    "LBL_UK_VAT_PAYER": "Confirm the VAT number [GB]",
-    "LBL_UK_VAT_PAYER_DESC": "The service allows you to verify whether a company is registered as a VAT taxpayer in Great Britain",
+    "LBL_UK_VAT_PAYER": "Confirm the VAT number [UK]",
+    "LBL_UK_VAT_PAYER_DESC": "The service allows you to verify whether a company is registered as a VAT taxpayer in United Kingdom",
     "LBL_UK_VAT_PAYER_CONFIRM": "The entity with the given number is an UK VAT payer",
     "LBL_UK_VAT_PAYER_NOT_CONFIRM": "The entity with the given number is not an UK VAT payer",
     "LBL_FR_ENTERPRISE_GOUV": "Data Gouv [Fr]",
     "LBL_FR_ENTERPRISE_GOUV_DESC": "Fetch data on French companies from the INSEE (Institut National de la Statistique et des Études Économiques)",
     "LBL_BR_RECITA_WS_CNPJ": "Receita WS CNPJ [BR]",
-    "LBL_BR_RECITA_WS_CNPJ_DESC": "Fetch data on Brazilian companies  from the database of the Federal Tax Office of Brazil (Cadastro Nacional de Pessoas Jurídicas) provided by Receita WS",
+    "LBL_BR_RECITA_WS_CNPJ_DESC": "Fetch data on Brazilian companies from the database of the Federal Tax Office of Brazil (Cadastro Nacional de Pessoas Jurídicas) provided by Receita WS",
     "LBL_BR_RECITA_WS_CNPJ_NUMBER": "CNPJ",
     "LBL_BR_RECITA_WS_CNPJ_ERROR": "The query limit has been exceeded. Wait one minute.",
     "LBL_NO_BRREG_ENHETSREGISTERET": "Brreg Enhetsregisteret [NO]",
