Update install translations

--- a/install/languages/bs-BA/Settings/YetiForce.json
+++ b/install/languages/bs-BA/Settings/YetiForce.json
@@ -126,37 +126,37 @@
     "LBL_ACTIVATE_DEACTIVATE_SERVICE_CONFIRM_DESC": "Jeste li sigurni da želite aktivirati/deaktivirati uslugu?",
     "LBL_SHOP_YETIFORCEPDFPREMIUM_INTRO": "Additional Chromium/Chrome engine to generate PDF files",
     "LBL_SHOP_YETIFORCEPDFPREMIUM_DESC": "Additional engine to generate PDF Chromium/Chrome files\nThe Chromium engine used to generate PDFs introduces a method of creating complex PDF files.\n\nFeatures:\n- compatibility with CSS3 and HTML 5\n- compatibility with all technologies supported by the browser\n- fully supported special characters and fonts\n- the only limitation is the browsers capability\n- support for OS: Linux, macOS, Windows",
-    "LBL_SHOP_YETIFORCERCPLCEIDG_INTRO": "",
-    "LBL_SHOP_YETIFORCERCPLCEIDG_DESC": "",
+    "LBL_SHOP_YETIFORCERCPLCEIDG_INTRO": "Fetch data on Polish companies from the Central Register and Information on Economic Activity in Poland",
+    "LBL_SHOP_YETIFORCERCPLCEIDG_DESC": "Fetch data on Polish companies from the Central Register and Information on Economic Activity in Poland (CEIDG)\n\nCountry: Poland\nData provider: CEIDG & Biznes.gov.pl https://dane.biznes.gov.pl/ \nModules: Accounts, Leads, Vendors, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: Yes",
     "LBL_SHOP_YETIFORCERCORB_INTRO": "",
     "LBL_SHOP_YETIFORCERCORB_DESC": "",
-    "LBL_SHOP_YETIFORCERCPLKRS_INTRO": "",
-    "LBL_SHOP_YETIFORCERCPLKRS_DESC": "",
-    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_INTRO": "",
-    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_DESC": "",
-    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_INTRO": "",
-    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_DESC": "",
-    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_INTRO": "",
-    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_DESC": "",
-    "LBL_SHOP_YETIFORCERCUSAEDGAR_INTRO": "",
-    "LBL_SHOP_YETIFORCERCUSAEDGAR_DESC": "",
-    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_INTRO": "",
-    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_DESC": "",
-    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_INTRO": "",
-    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_DESC": "",
-    "LBL_SHOP_YETIFORCERCCHZEFIX_INTRO": "",
-    "LBL_SHOP_YETIFORCERCCHZEFIX_DESC": "",
-    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_INTRO": "",
-    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_DESC": "",
-    "LBL_SHOP_YETIFORCERCVATIFYEU_INTRO": "",
-    "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": "",
-    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_INTRO": "",
-    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_DESC": "",
+    "LBL_SHOP_YETIFORCERCPLKRS_INTRO": "Fetch data on Polish companies from The National Court Register in Poland",
+    "LBL_SHOP_YETIFORCERCPLKRS_DESC": "Fetch data on Polish companies from The National Court Register in Poland (KRS)\n\nCountry: Poland\nData provider: Ministerstwo Sprawiedliwości https://prs.ms.gov.pl/ \nModules: Accounts, Leads, Vendors\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: No",
+    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_INTRO": "Verify VAT taxpayer’s status [PL]",
+    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_DESC": "The service allows you to verify whether an entity is an active, exempt, or unregistered VAT taxpayer in Poland\n\nCountry: Poland\nData provider: Ministerstwo Finansów https://www.podatki.gov.pl/ \nModules: Accounts, Leads, Vendors, Competition\nAutocomplete data in the record:  No\nAdditional database access fee: No\nAccount registration: No",
+    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_INTRO": "Fetch data on UK companies from the Comapnies House agency",
+    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_DESC": "Fetch data on UK companies from the Comapnies House agency\n\nCountry: United Kingdom\nData provider:Companies House https://find-and-update.company-information.service.gov.uk/ \nModules: Accounts, Leads, Vendors, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: Yes",
+    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_INTRO": "Confirm the VAT number [UK]",
+    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_DESC": "The service allows you to verify whether a company is registered as a VAT taxpayer in Great Britain\n\nCountry: United Kingdom\nData provider: HMRC https://www.gov.uk/\nModules: Accounts, Leads, Vendors, Competition, Partners\nAutocomplete data in the record: No\nAdditional database access fee: No\nAccount registration: No",
+    "LBL_SHOP_YETIFORCERCUSAEDGAR_INTRO": "Fetch data on US companies from the United States Securities and Exchange Commission",
+    "LBL_SHOP_YETIFORCERCUSAEDGAR_DESC": "Fetch data on US companies from the United States Securities and Exchange Commission via EDGAR\n\nCountry: USA\nData provider:  US SEC  https://www.sec.gov/\nModules: Accounts, Leads, Partners, Vendors, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: No",
+    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_INTRO": "Fetch data on French companies from the INSEE",
+    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_DESC": "Fetch data on French companies from the INSEE (Institut National de la Statistique et des Études Économiques)\n\nCountry: France\nData provider: INSEE (Institut National de la Statistique et des Études Économiques) \nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: No",
+    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_INTRO": "Fetch data on Brazilian companies from the database of the Federal Tax Office of Brazil",
+    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_DESC": "Fetch data on Brazilian companies from the database of the Federal Tax Office of Brazil (Cadastro Nacional de Pessoas Jurídicas) provided by Receita WS\n\nCountry: Brazil\nData provider: Cadastro Nacional de Pessoas Jurídicas (CNPJ)\nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No/Yes - limits apply: https://www.receitaws.com.br/#section-plans \nAccount registration: Yes",
+    "LBL_SHOP_YETIFORCERCCHZEFIX_INTRO": "Fetch data on Swiss companies from the Swiss Central Business Name Index",
+    "LBL_SHOP_YETIFORCERCCHZEFIX_DESC": "Fetch data on Swiss companies from the Swiss Central Business Name Index (Zentraler Firmenindex)\n\nCountry: Switzerland\nData provider: Zentraler Firmenindex https://www.zefix.admin.ch/ \nModules:Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: Yes",
+    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_INTRO": "Fetch data on Norwegian companies from the Central Brønnøysund Database",
+    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_DESC": "Fetch data on Norwegian companies from the Central Brønnøysund Database (The Brønnøysund Register Centre)\n\nCountry: Norway\nData provider:  Brønnøysundregistrene https://www.brreg.no/ \nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: No",
+    "LBL_SHOP_YETIFORCERCVATIFYEU_INTRO": "Fetch data from VATify.eu database, which also contains the taxpayer's current status",
+    "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": "Fetch data from VATify.eu database, which also contains the taxpayer's current status\n\nCountry: List available at the Data provider’s website:: https://www.vatify.eu/coverage.html \nData provider: Vatify\nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee:No\nAccount registration: Yes",
+    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_INTRO": "YetiForce Portal in the cloud with a Webservice Premium license",
+    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_DESC": "YetiForce Portal in the cloud with a Webservice Premium license is a complex service that provides access to the YetiForce Portal installed on our hyper efficient cloud.\nThe subscription also includes a YetiForce Webservice Premium license required for the portal to work properly.\n\n",
     "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "",
     "LBL_SHOP_YETIFORCEWAPROERP_DESC": "",
-    "LBL_SHOP_YETIFORCERCDKCVR_INTRO": "",
-    "LBL_SHOP_YETIFORCERCDKCVR_DESC": "",
-    "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "",
-    "LBL_SHOP_YETIFORCERCNORTHDATA_DESC": ""
+    "LBL_SHOP_YETIFORCERCDKCVR_INTRO": "Fetch data on Danish and Norwegian companies via CVR API from the Danish Central Business Register",
+    "LBL_SHOP_YETIFORCERCDKCVR_DESC": "Fetch data on Danish and Norwegian companies via CVR API from the Danish Central Business Register (CVR)\n\nCountry: Denmark\nData provider: CVR https://cvrapi.dk/ \nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: Yes",
+    "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "Fetching data about companies North Data's company database",
+    "LBL_SHOP_YETIFORCERCNORTHDATA_DESC": "Fetching data about companies North Data's company database\n\nCountry: Austria, France, Germany, Poland, Luxembourg, SPain, Switzerland, United Kingdom\nData provider: North Data https://www.northdata.com/ \nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No. Limits apply.\nAccount registration: Yes"
   }
 }
