--- a/install/languages/pl-PL/Settings/YetiForce.json
+++ b/install/languages/pl-PL/Settings/YetiForce.json
@@ -126,37 +126,37 @@
     "LBL_ACTIVATE_DEACTIVATE_SERVICE_CONFIRM_DESC": "Czy na pewno chcesz aktywować/dezaktywować usługę?",
     "LBL_SHOP_YETIFORCEPDFPREMIUM_INTRO": "Dodatkowy silnik Chromium/Chrome do generowania plików PDF",
     "LBL_SHOP_YETIFORCEPDFPREMIUM_DESC": "Dodatkowy silnik do generowania plików PDF Chromium/Chrome\nSilnik Chromium używany do generowania dokumentów PDF wprowadza możliwość tworzenia zaawansowanych i skomplikowanych plików PDF.\n\nFunkcje:\n- kompatybilność z CSS3 i HTML 5\n- kompatybilność ze wszystkimi technologiami obsługiwanymi przez przeglądarkę\n- w pełni obsługiwane znaki specjalne i czcionki\n- jedynym ograniczeniem są możliwości przeglądarki\n- wsparcie systemu operacyjnego: Linux, macOS, Windows",
-    "LBL_SHOP_YETIFORCERCPLCEIDG_INTRO": "",
-    "LBL_SHOP_YETIFORCERCPLCEIDG_DESC": "",
+    "LBL_SHOP_YETIFORCERCPLCEIDG_INTRO": "Pobierz dane polskich firm z Centralnej Ewidencji i Informacji o Działalności Gospodarczej w Polsce",
+    "LBL_SHOP_YETIFORCERCPLCEIDG_DESC": "Pobierz dane dotyczące polskich przedsiębiorstw z Centralnej Ewidencji i Informacji o Działalności Gospodarczej w Polsce (CEIDG)\n\nKraj: Polska\nDostawca danych: CEIDG & Biznes. ov.pl https://dane.biznes.gov.pl/\nModuły: Kontrahenci, Leady, Dostawcy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Tak",
     "LBL_SHOP_YETIFORCERCORB_INTRO": "",
     "LBL_SHOP_YETIFORCERCORB_DESC": "",
-    "LBL_SHOP_YETIFORCERCPLKRS_INTRO": "",
-    "LBL_SHOP_YETIFORCERCPLKRS_DESC": "",
-    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_INTRO": "",
-    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_DESC": "",
-    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_INTRO": "",
-    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_DESC": "",
-    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_INTRO": "",
-    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_DESC": "",
-    "LBL_SHOP_YETIFORCERCUSAEDGAR_INTRO": "",
-    "LBL_SHOP_YETIFORCERCUSAEDGAR_DESC": "",
-    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_INTRO": "",
-    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_DESC": "",
-    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_INTRO": "",
-    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_DESC": "",
-    "LBL_SHOP_YETIFORCERCCHZEFIX_INTRO": "",
-    "LBL_SHOP_YETIFORCERCCHZEFIX_DESC": "",
-    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_INTRO": "",
-    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_DESC": "",
-    "LBL_SHOP_YETIFORCERCVATIFYEU_INTRO": "",
-    "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": "",
-    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_INTRO": "",
-    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_DESC": "",
+    "LBL_SHOP_YETIFORCERCPLKRS_INTRO": "Pobierz dane polskich firm z Krajowego Rejestru Sądowego w Polsce",
+    "LBL_SHOP_YETIFORCERCPLKRS_DESC": "Pobierz dane polskich firm z Krajowego Rejestru Sądowego w Polsce (KRS)\n\nKraj: Polska\nDostawca danych: Ministerstwo Sprawiedliwości https://prs.ms.gov.pl/ \nModuły: Kontrahenci, Leady, Dostawcy\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Nie",
+    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_INTRO": "Weryfikacja statusu płatnika VAT [PL]",
+    "LBL_SHOP_YETIFORCERCPLVATPAYERSTATUS_DESC": "Usługa umożliwiająca sprawdzenie, czy podmiot jest czynnym, zwolnionym czy też niezarejestrowanym podatnikiem w VAT w Polsce.\n\nKraj: Polska\nDostawca danych: Ministerstwo Finansów https://www.podatki.gov.pl/ \nModuły: Kontrahenci, Leady, Dostawcy, Konkurencja\nAutouzupełnianie danych w rekordzie: Nie\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Nie",
+    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_INTRO": "Pobieranie danych o firmach z Wielkiej Brytanii z agencji Companies House",
+    "LBL_SHOP_YETIFORCERCUKCOMPANIESHOUSE_DESC": "Pobieranie danych o firmach z Wielkiej Brytanii z agencji Companies House\n\nKraj: Wielka Brytania\nDostawca danych: Companies House https://find-and-update.company-information.service.gov.uk/ \nModuły: Kontrahenci, Leady, Dostawcy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Tak",
+    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_INTRO": "Potwierdzenie numeru VAT [UK]",
+    "LBL_SHOP_YETIFORCERCUKVATPAYERSTATUS_DESC": "Usługa umożliwiająca sprawdzenie, czy firma jest zarejestrowana jako płatnik VAT w Wielkiej Brytanii\n\nKraj: Wielka Brytania\nDostawca danych: HMRC https://www.gov.uk/\nModuły: Kontrahenci, Leady, Dostawcy, Konkurencja, Partnerzy\nAutouzupełnianie danych w rekordzie: Nie\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Nie",
+    "LBL_SHOP_YETIFORCERCUSAEDGAR_INTRO": "Pobieranie danych o firmach w USA z U.S. Securities and Exchange Commission",
+    "LBL_SHOP_YETIFORCERCUSAEDGAR_DESC": "Pobieranie danych o firmach w USA z U.S. Securities and Exchange Commission (SEC) z bazy EDGAR\n\nKraj: USA\nDostawca: US SEC  https://www.sec.gov/\nModuły: Kontrahenci, Leady, Partnerzy, Dostawcy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Nie",
+    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_INTRO": "Pobieranie danych o francuskich przedsiębiorstwach z INSEE",
+    "LBL_SHOP_YETIFORCERCFRENTERPRISEGOUV_DESC": "Pobieranie danych o francuskich przedsiębiorstwach z Państwowego Instytutu Statystyki i Badań Gospodarczych (INSEE Institut National de la Statistique et des Études Économiques)\n\nKraj: Francja\nDostawca: INSEE (Institut National de la Statistique et des Études Économiques) \nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Nie",
+    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_INTRO": "Pobieranie danych o przedsiębiorstwach brazylijskich z bazy CNPJ",
+    "LBL_SHOP_YETIFORCERCBRRECEITAWSCNPJ_DESC": "Pobieranie danych o przedsiębiorstwach brazylijskich dostarczone przez ReceitaWS z bazy Federalnego Urzędu Skarbowego Brazylii (Cadastro Nacional de Pessoas Jurídicas)\n\nKraj: Brazylia\nDostawca: Cadastro Nacional de Pessoas Jurídicas (CNPJ)\nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Koknurenci\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie / Tak - obowiązują limity: https://www.receitaws.com.br/#section-plans \nRejestracja konta: Nieobowiązkowa",
+    "LBL_SHOP_YETIFORCERCCHZEFIX_INTRO": "Pobieranie danych o przedsiębiorstwach Szwajcarii z bazy Zentraler Firmenindex",
+    "LBL_SHOP_YETIFORCERCCHZEFIX_DESC": "Pobieranie danych o przedsiębiorstwach Szwajcarii z bazy szwajcarskiego centralnego indeksu nazw firm (Zentraler Firmenindex)\n\nKraj: Szwajcaria\nDostawca: Zentraler Firmenindex https://www.zefix.admin.ch/ \nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Tak",
+    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_INTRO": "Pobieranie danych o norweskich przedsiębiorstwach z centralnej bazy Brønnøysund",
+    "LBL_SHOP_YETIFORCERCNOBRREGENHETSREG_DESC": "Pobieranie danych o norweskich przedsiębiorstwach z centralnej bazy Brønnøysund (The Brønnøysund Register Centre)\n\nKraj: Norwegia\nDostawca: Brønnøysundregistrene https://www.brreg.no/ \nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Nie",
+    "LBL_SHOP_YETIFORCERCVATIFYEU_INTRO": "Pobieranie danych firm z bazy VATify.eu, która również zawiera aktualny status płatnika VAT",
+    "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": "Pobieranie danych firm z bazy VATify.eu, która również zawiera aktualny status płatnika VAT\n\nKraj: Lista na stronie dostawcy: https://www.vatify.eu/coverage.html \nDostawca: Vatify\nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Konkurencja \nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Tak",
+    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_INTRO": "YetiForce Portal w chmurze z licencją Webservice Premium",
+    "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_DESC": "YetiForce Portal w chmurze z licencją Webservice Premium to kompleksowa usługa zapewniająca użytkownikom dostęp do Portalu YetiForce znajdującego się w naszej niezwykle wydajnej chmurze. \nSubskrypcja tego pakietu obejmuje również licencję YetiForce Webservice Premium, niezbędną do prawidłowego działania portalu.\n\n",
     "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "",
     "LBL_SHOP_YETIFORCEWAPROERP_DESC": "",
-    "LBL_SHOP_YETIFORCERCDKCVR_INTRO": "",
-    "LBL_SHOP_YETIFORCERCDKCVR_DESC": "",
-    "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "",
-    "LBL_SHOP_YETIFORCERCNORTHDATA_DESC": ""
+    "LBL_SHOP_YETIFORCERCDKCVR_INTRO": "Pobieranie danych o duńskich i norweskich firmach z duńskiej bazy przedsiębiorstw (CVR)",
+    "LBL_SHOP_YETIFORCERCDKCVR_DESC": "Pobieranie danych o duńskich i norweskich firmach przez CVR API z bazy Duńskiego centralnego rejestru przedsiębiorstw (CVR)\n\nKraj: Dania, Norwegia\nDostawca: CVR https://cvrapi.dk/ \nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Tak",
+    "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "Pobieranie danych firm z bazy North Data",
+    "LBL_SHOP_YETIFORCERCNORTHDATA_DESC": "Pobieranie danych firm z międzynarodowej bazy North Data\n\nKraj: Austria, Francja, Niemcy, Polska, Luksemburg, Hiszpania, Szwajcaria, Wielka Brytania\nDostawca danych: North Data https://www.northdata.com/ \nModuły: Accounts, Leads, Vendors, Partners, Competition\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie, ale obowiązują limity.\nRejestracja konta: Tak"
   }
 }
