--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -152,8 +152,8 @@
     "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": "Fetch data from VATify.eu database, which also contains the taxpayer's current status\n\nCountry: List available at the Data provider’s website:: https://www.vatify.eu/coverage.html \nData provider: Vatify\nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee:No\nAccount registration: Yes",
     "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_INTRO": "YetiForce Portal in the cloud with a Webservice Premium license",
     "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_DESC": "YetiForce Portal in the cloud with a Webservice Premium license is a complex service that provides access to the YetiForce Portal installed on our hyper efficient cloud.\nThe subscription also includes a YetiForce Webservice Premium license required for the portal to work properly.\n\n",
-    "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "",
-    "LBL_SHOP_YETIFORCEWAPROERP_DESC": "",
+    "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "Integration with Asseco Wapro ERP software",
+    "LBL_SHOP_YETIFORCEWAPROERP_DESC": "Integration with Asseco Wapro ERP software",
     "LBL_SHOP_YETIFORCERCDKCVR_INTRO": "Fetch data on Danish and Norwegian companies via CVR API from the Danish Central Business Register",
     "LBL_SHOP_YETIFORCERCDKCVR_DESC": "Fetch data on Danish and Norwegian companies via CVR API from the Danish Central Business Register (CVR)\n\nCountry: Denmark\nData provider: CVR https://cvrapi.dk/ \nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No\nAccount registration: Yes",
     "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "Fetching data about companies North Data's company database",
