--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -20,7 +20,7 @@
     "LBL_CAT_SUPPORT": "Support",
     "LBL_CAT_ADDONS": "Addons",
     "LBL_CAT_INTEGRATIONS": "Integrations",
-    "LBL_CAT_RECORD_COLLECTORS": "Record Collectors",
+    "LBL_CAT_RECORD_COLLECTORS": "Records Collectors",
     "LBL_CAT_PARTNER_SOLUTIONS": "Partner's solutions",
     "LBL_DOWNLOAD_LANG": "Download language",
     "LBL_DOWNLOAD": "Download",
